<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hailo_ros_bridge</name>
  <version>0.1.0</version>
  <description>
    A ROS2 package to bridge Hailo AI accelerator detections to ROS topics using ZeroMQ
  </description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-zmq</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package> 